changes in sell something

--- a/src/Styles/Auth.scss
+++ b/src/Styles/Auth.scss
@@ -20,7 +20,11 @@
                 color: #FF6C3D;
             }
         }
-
+p{
+text-align: right;
+// background-color: black;
+width: 75%;
+}
         h4{
             display: flex;
             align-items: center;
