--- a/src/Styles/Footer.scss
+++ b/src/Styles/Footer.scss
@@ -1,11 +1,12 @@
 .footer {
-//   border: 1px solid #000;
+  //   border: 1px solid #000;
   width: 100%;
-  height: 300px;
   font-family: Poppins;
-  
+  background-color: #f7f7f7;
+  padding: 30px 0;
+
   .footer-heading {
-    border-bottom: 1px solid var(--download-8-silver, #ccc);
+    // border-bottom: 1px solid var(--download-8-silver, #ccc);
     h1 {
       font-weight: 500;
       margin-left: 70px;
@@ -14,34 +15,42 @@
 
   .footer-data {
     display: flex;
-    align-items: center;
+    
     justify-content: space-around;
     width: 100%;
     margin: auto;
 
     .data-row {
       display: flex;
-      align-items: center;
-      justify-content: center;
+    
       flex-direction: column;
-      gap: 15px;
-      height: 250px;
-      // border: 1px solid #000;
+      gap: 5px;
+     
+      h4 {
+        color: #ff6c3d;
+        margin-bottom: 10px;
+      }
+      p {
+        font-size: 16px;
+        &:hover {
+          color: red;
+          cursor: pointer;
+        }
+      }
 
       h1 {
         span {
           color: #ff6c3d;
         }
       }
-      p{
-        
+      p {
       }
     }
   }
 }
 
-@media (max-width:700px){
-  .footer{
-  display: none;
+@media (max-width: 700px) {
+  .footer {
+    display: none;
   }
 }
