category and about us page design

--- a/src/Styles/Footer.scss
+++ b/src/Styles/Footer.scss
@@ -37,6 +37,15 @@
           cursor: pointer;
         }
       }
+      a {
+        font-size: 16px;
+        color: #000;
+        text-decoration: none;
+        &:hover {
+          color: red;
+          cursor: pointer;
+        }
+      }
 
       h1 {
         span {
