--- a/src/Styles/Categories.scss
+++ b/src/Styles/Categories.scss
@@ -1,46 +1,52 @@
-
-.categorie{
+.categorie {
   width: 85%;
-  // border: 1px solid #000;
   margin: auto;
   margin-bottom: 30px;
   margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  gap: 10px;
+  gap: 20px 10px;
   font-family: Poppins;
 
-  .categorie-box{
-    border-radius: 14px;
-    border: 1px solid var(--download-8-silver, #CCC);
+
+  .categorie-box {
+    border-radius: 10px;
+    border: 1px solid var(--download-8-silver, #ccc);
     padding: 10px;
-    width: 70px;
+    width: 100px;
+    height: 80px;
     cursor: pointer;
-    img{
-      object-fit: contain;
-      width: 100%;
-      height: 50px;
+    text-align: center;
+    &:hover {
+      box-shadow: 0 0 10px #e3e3e3;
     }
-    
+
+    img {
+      object-fit: cover;
+      width: 50px;
+      height: 50px;
+      margin: auto;
+    }
   }
-  p{
+  p {
     font-size: 12px;
+    text-align: center;
+    margin-top: 10px;
   }
 }
 
-@media (max-width:700px){
-  .categorie{
+@media (max-width: 700px) {
+  .categorie {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     width: 90%;
     gap: 0px;
-    .categorie-box{
+    .categorie-box {
       padding: 5px;
       width: 50px;
-      
     }
-  p{
-    font-size: 10px;
-  }
+    p {
+      font-size: 10px;
+    }
   }
 }
