--- a/src/Styles/Uploader.scss
+++ b/src/Styles/Uploader.scss
@@ -4,11 +4,12 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      border: 2px dashed #1475cf;
+      border: 2px dashed  #ff6c3d4f;
       height: 90px;
-      width: 190px;
+      width: 47%;
       cursor: pointer;
-      border-radius: 5px;
+      // margin-right: 10px;
+      margin-bottom: 10px;
     }
     
     .uploaded-row{
