--- a/src/index.css
+++ b/src/index.css
@@ -160,3 +160,13 @@
   padding: 10px 20px;
 
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* background-color: rgba(0, 0, 0, 0.5);  */
+  z-index: 999; /* Ensure it's behind the notification panel */
+}
