--- a/src/Styles/Shop.scss
+++ b/src/Styles/Shop.scss
@@ -1,4 +1,4 @@
-.shop-container{
+.shop-container {
     // border: 1px solid #000;
     border-radius: 7px;
     background: #FFF;
@@ -12,20 +12,22 @@
     gap: 70px;
     position: relative;
 
-    .card-image{
-        height: 150px;
-        width: 200px;
+    .card-image {
+        height: 300px;
+        width: 250px;
+        min-width: 250px;
         // border: 1px solid #000;
         border-radius: 10px;
         display: flex;
-        
-        img{
+
+        img {
             object-fit: contain;
             width: 100%;
-            height: 100%;  
-            border-radius: 10px;  
+            height: 100%;
+            border-radius: 10px;
         }
-        button{
+
+        button {
             height: 20%;
             width: 20%;
             display: flex;
@@ -41,59 +43,64 @@
         }
     }
 
-    .card-data{
+    .card-data {
+        width: 100%;
         display: flex;
         flex-direction: column;
-        h3{
+
+        h3 {
             font-weight: 400;
         }
 
-        .card-timings{
+        .card-timings {
             display: flex;
             gap: 15px;
-            p{
+
+            p {
                 font-size: 14px;
                 color: gray;
             }
         }
 
-        .card-address{
+        .card-address {
             display: flex;
             // align-items: center;
             flex-direction: column;
             // justify-content: left;
-            
-            margin-top: 10px;
-           gap: 5px;
 
-           p{
-            font-size: 15px;
-           }
+            margin-top: 10px;
+            gap: 5px;
+
+            p {
+                font-size: 15px;
+            }
         }
 
-        .icon{
+        .icon {
             font-weight: 600;
         }
 
-        .card-subcategories{
+        .card-subcategories {
             display: flex;
             margin-top: 5px;
             gap: 7px;
-            p{
+
+            p {
                 border: 1px solid DDDDDD;
                 border-radius: 5px;
-                background-color:#DDDDDD ;
-                font-weight:300;
+                background-color: #DDDDDD;
+                font-weight: 300;
                 padding: 2px 15px;
                 font-size: 12px;
             }
         }
 
-        .card-button{
+        .card-button {
             display: flex;
             margin-top: 15px;
             gap: 5px;
-            button{
+
+            button {
                 padding: 7px 10px;
                 background-color: #FF6C3D;
                 color: #fff;
@@ -106,50 +113,51 @@
         }
     }
 
-    .fav-btn{
+    .fav-btn {
         position: absolute;
         right: 40px;
         font-size: 25px;
         cursor: pointer;
     }
-    .active{
+
+    .active {
         color: rgb(221, 9, 9);
     }
 }
 
-@media (min-width:900px) and (max-width:1100px){
-    .shop-container{
+@media (min-width:900px) and (max-width:1100px) {
+    .shop-container {
         width: 90%;
         margin: auto;
         margin-top: 20px;
     }
 }
 
-@media (min-width:700px) and (max-width:900px){
-    .shop-container{
+@media (min-width:700px) and (max-width:900px) {
+    .shop-container {
         width: 90%;
         margin: auto;
         margin-top: 20px;
     }
 }
 
-@media (max-width:700px){
-    .shop-container{
+@media (max-width:700px) {
+    .shop-container {
         width: 95%;
         margin: auto;
         display: flex;
         flex-direction: column;
 
-        .card-image{
+        .card-image {
             width: 100%;
         }
 
-        .card-data{
-            .card-button{
+        .card-data {
+            .card-button {
                 width: 100%;
 
 
-                button{
+                button {
                     padding: 7px 10px;
                     background-color: #FF6C3D;
                     color: #fff;
