--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
+  margin-top: 25px  ;
+  z-index: 99990;
 }
 
 .notification-item {
@@ -169,4 +171,35 @@
   bottom: 0;
   /* background-color: rgba(0, 0, 0, 0.5);  */
   z-index: 999; /* Ensure it's behind the notification panel */
+}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999; /* Ensure it's above other content */
+}
+
+@media (max-width: 900px){
+  .Carousel_img_box {
+    width: 100%;
+    height: 300px;
+  }
+}
+@media (max-width: 700px){
+  .Carousel_img_box {
+    width: 100%;
+    height: 200px;
+  }
+}
+@media (max-width: 700px){
+  .home-modal {
+    width: 90%;
+   
+  }
 }
