--- a/src/Styles/HomeMobileNavbar.scss
+++ b/src/Styles/HomeMobileNavbar.scss
@@ -1,43 +1,64 @@
-.home-mobile-navbar{
-    display: none;
+.home-mobile-navbar {
+  display: none;
 }
 
-@media (max-width:900px){
-    .home-mobile-navbar{
-        display: block;
-        border-bottom: 1px solid var(--download-8-silver, #CCC);
-        background: #FFF;
-        padding: 5px;
-        font-family: Poppins;
-        display: flex;
-        justify-content: space-between;
+@media (max-width: 900px) {
+  .home-mobile-navbar {
+    display: block;
+    border-bottom: 1px solid var(--download-8-silver, #ccc);
+    background: #fff;
+    padding: 5px;
+    font-family: Poppins;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-        .home-mobile-heading{
-            h1{
-                span{
-                    color: #FF6C3D;
-                }
-            }
+    .home-mobile-heading {
+      h1 {
+        font-size: 1.5rem;
+        font-weight: 900;
+        margin-bottom: 0;
+        span {
+          color: #ff6c3d;
         }
-
-        .home-mobile-options{
-            display: flex;
-            align-items: center;
-            width: 20%;
-            justify-content: space-around;
-
-            .mobile-options-notification{
-                color: #FF6C3D;
-                
-            }
-
-        }
-        img{
-            height: 40px;
-            border-radius: 50%;
-
-        }
+      }
     }
+
+    .home-mobile-options {
+      display: flex;
+      align-items: center;
+      width: 30%;
+      justify-content: space-around;
+
+    //   .mobile-options-notification {
+    //     color: #ff6c3d;
+    //   }
+      .icon-bg {
+        background-color: #ff6c3d24;
+        color: #ff6c3d;
+        border-radius: 100px;
+        min-width: 35px;
+        width: 35px;
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        &:hover {
+          background-color: #ff6c3d;
+          color: #fff;
+        }
+      }
+      img {
+        width: 35px;
+        height: 35px;
+      }
+    }
+    img {
+      height: 40px;
+      border-radius: 50%;
+    }
+  }
 }
 
 // @media (min-width:7)
