--- a/src/Styles/HomeNavbar.scss
+++ b/src/Styles/HomeNavbar.scss
@@ -1,5 +1,5 @@
 .home-navbar {
-  height: 60px;
+  min-height: 60px;
   box-shadow: 0px -5px 30px 0px rgba(0, 0, 0, 0.25);
   background: #fff;
   display: flex;
@@ -10,6 +10,8 @@
 
   .home-nav-heading {
     h1 {
+      font-size: 2rem;
+      font-weight: 900;
       span {
         color: #ff6c3d;
       }
@@ -23,8 +25,31 @@
     justify-content: space-around;
     color: #ff6c3d;
     cursor: pointer;
-    p {
-        margin: 0px 10px;
+    a {
+      margin: 0px 10px;
+      color: #000;
+      text-decoration: none;
+    }
+    .active {
+      color: #ff6c3d;
+      background-color: #fff;
+      border: 0;
+    }
+    .icon-bg {
+      background-color: #ff6c3d24;
+      color: #ff6c3d;
+      border-radius: 100px;
+      min-width: 35px;
+      width: 35px;
+      height: 35px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      &:hover {
+        background-color: #ff6c3d;
+        color: #fff;
+      }
     }
     button {
       padding: 7px 10px;
@@ -32,10 +57,9 @@
       background-color: #ff6c3d;
       color: #fff;
       border: 1px solid #ff6c3d;
-    }
-    .home-nav-notification {
-      font-size: 20px;
-      transform: translate(0%, 15%);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
@@ -44,7 +68,7 @@
   background-color: #fff;
   z-index: 999;
   height: 300px;
-  width: 400px;
+  width: 450px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -52,10 +76,12 @@
   border: 1px solid #ccc;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-
+  border-radius: 10px;
   font-family: Poppins;
   .home-modal-heading {
     h1 {
+      font-size: 2rem;
+      font-weight: 900;
       margin-top: 5px;
       text-align: center;
       span {
@@ -68,8 +94,6 @@
     margin-top: 20px;
 
     div {
-      // display: flex;
-      // flex-direction: column;
       margin-top: 10px;
       input {
         width: 100%;
@@ -83,6 +107,8 @@
         border: 1px solid #ff6c3d;
         color: #fff;
         border-radius: 2px;
+        width: 100%;
+        border-radius: 5px;
       }
     }
   }
@@ -131,6 +157,10 @@
     color: #fff;
     border: 1px solid #ff6c3d;
   }
+}
+.Carousel_img_box {
+  width: 100%;
+  height: 500px;
 }
 @media (min-width: 900px) and (max-width: 1300px) {
   .home-navbar {
