--- a/src/Styles/MobileFooter.scss
+++ b/src/Styles/MobileFooter.scss
@@ -1,82 +1,85 @@
-.mobile-footer{
-    display: none;
+.mobile-footer {
+  display: none;
 }
 
-@media (max-width:900px){
-    .mobile-footer{
-        display: block;
-        border: 1px solid #FF6C3D;
-        height: 70px;
-        border-radius:10px 10px 0px 0px;
-        background-color: #FF6C3D;
-        color: #fff;
-        display: flex;
-        justify-content: space-around;
-        // position: fixed;
-        // margin-top: 92vh;
-        z-index: 999;
-        
-        div{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            font-family: Poppins;
-            .icon{
-                font-size: 25px;
-            }
-        }
-    }
-    .home-modal-footer {
-        background-color: #fff;
-        z-index: 999;
-        width: 90%; /* Adjust width to fit smaller screens */
-        max-width: 400px; /* Limit maximum width for larger screens */
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border: 1px solid #ccc;
-        padding: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        font-family: 'Poppins', sans-serif;
-    }
-    
-    .home-modal-heading h1 {
-        margin-top: 5px;
-        text-align: center;
-        span {
-            color: #FF6C3D;
-        }
-    }
-    
-    .home-modal-body {
-        margin-top: 20px;
-    }
-    
-    .home-modal-body div {
-        margin-top: 10px;
-    }
-    
-    .home-modal-body input {
-        width: 100%;
-        padding: 7px;
-    }
-    
-    .home-modal-body button {
-        padding: 5px 12px;
-        margin-top: 10px;
-        background-color: #FF6C3D;
-        border: 1px solid #FF6C3D;
-        color: #FFF;
-        border-radius: 2px;
-    }
-    
-    .home-modal-close {
-        position: absolute;
-        top: 10px;
-        right: 15px;
+@media (max-width: 900px) {
+   
+  .mobile-footer {
+    display: block;
+    border: 1px solid #ff6c3d;
+    // height: 70px;
+    border-radius: 10px 10px 0px 0px;
+    background-color: #ff6c3d;
+    color: #fff;
+    display: flex;
+    justify-content: space-around;
+    // position: fixed;
+    // margin-top: 92vh;
+    z-index: 999;
+    padding-top: 15px;
+    div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-family: Poppins;
+      .icon {
         font-size: 20px;
-        cursor: pointer;
+      }
+      p{
+        font-size: 12px;
+      }
     }
-    
+  }
+  .home-modal-footer {
+    background-color: #fff;
+    z-index: 999;
+    width: 90%; /* Adjust width to fit smaller screens */
+    max-width: 400px; /* Limit maximum width for larger screens */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid #ccc;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-family: "Poppins", sans-serif;
+  }
+
+  .home-modal-heading h1 {
+    margin-top: 5px;
+    text-align: center;
+    span {
+      color: #ff6c3d;
+    }
+  }
+
+  .home-modal-body {
+    margin-top: 20px;
+  }
+
+  .home-modal-body div {
+    margin-top: 10px;
+  }
+
+  .home-modal-body input {
+    width: 100%;
+    padding: 7px;
+  }
+
+  .home-modal-body button {
+    padding: 5px 12px;
+    margin-top: 10px;
+    background-color: #ff6c3d;
+    border: 1px solid #ff6c3d;
+    color: #fff;
+    border-radius: 2px;
+  }
+
+  .home-modal-close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+  }
 }
