--- a/src/Styles/Uploader.scss
+++ b/src/Styles/Uploader.scss
@@ -10,6 +10,9 @@
       cursor: pointer;
       // margin-right: 10px;
       margin-bottom: 10px;
+      // &.full-width { 
+      //   width: 100%;
+      // }
     }
     
     .uploaded-row{
