--- a/src/Styles/HomeNavbar.scss
+++ b/src/Styles/HomeNavbar.scss
@@ -67,7 +67,7 @@
 .home-modal {
   background-color: #fff;
   z-index: 999;
-  height: 300px;
+  // height: 300px;
   width: 450px;
   position: absolute;
   top: 50%;
@@ -107,8 +107,9 @@
         border: 1px solid #ff6c3d;
         color: #fff;
         border-radius: 2px;
-        width: 100%;
+        // width: 100%;
         border-radius: 5px;
+        margin: auto;
       }
     }
   }
