--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  margin-top: 25px  ;
+  margin-top: 25px;
   z-index: 99990;
 }
 
@@ -170,36 +170,129 @@
   right: 0;
   bottom: 0;
   /* background-color: rgba(0, 0, 0, 0.5);  */
-  z-index: 999; /* Ensure it's behind the notification panel */
+  z-index: 999;
+  /* Ensure it's behind the notification panel */
 }
+
 .modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); 
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 999; /* Ensure it's above other content */
+  z-index: 999;
+  /* Ensure it's above other content */
 }
 
-@media (max-width: 900px){
+
+.User_Details_section input,
+.User_Details_section select {
+  padding: 7px 15px;
+  height: 45px;
+  margin: 0;
+  box-shadow: none !important;
+}
+
+.User_Details_section label {
+  color: #808080;
+  margin-bottom: 5px;
+}
+
+.User_Details_section form .btn_save_hp {
+  padding: 7px 25px;
+  border-radius: 5px;
+  background-color: #a7330e;
+  color: #fff;
+}
+
+.User_Details_section .profile-pic {
+  border-radius: 50%;
+  height: 150px;
+  width: 150px;
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  vertical-align: middle;
+  text-align: center;
+  color: transparent;
+  transition: all .3s ease;
+  text-decoration: none;
+  cursor: pointer;
+  border: 1px solid #fafafa;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.User_Details_section .profile-pic:hover {
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 10000;
+  color: #fff;
+  transition: all .3s ease;
+  text-decoration: none;
+}
+
+.User_Details_section .profile-pic span {
+  display: inline-block;
+  padding-top: 4.5em;
+  padding-bottom: 4.5em;
+}
+
+.User_Details_section form input[type="file"] {
+  display: none;
+  cursor: pointer;
+}
+
+
+.offer_search_section_hp {
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #ffdfd5;
+}
+
+@media (max-width: 900px) {
   .Carousel_img_box {
     width: 100%;
     height: 300px;
   }
+
+
 }
-@media (max-width: 700px){
+
+@media (max-width: 700px) {
   .Carousel_img_box {
     width: 100%;
     height: 200px;
   }
+
+
 }
-@media (max-width: 700px){
+
+@media (max-width: 768.98px) {
+  .offer_search_section_hp {
+    padding: 15px;
+    border-radius: 8px;
+    background-color: #ffdfd5;
+  }
+
+  .search-offer.offer_search_section_hp {
+    flex-direction: column;
+  }
+
+  .search-offer.offer_search_section_hp select {
+    width: 100%;
+    border-color: #808080;
+  }
+}
+
+@media (max-width: 700px) {
   .home-modal {
     width: 90%;
-   
+
   }
 }
