--- a/src/Styles/Auth.scss
+++ b/src/Styles/Auth.scss
@@ -1,7 +1,7 @@
 //auth navbar scc
 
 .auth-navbar{
-    height: 50px;
+    // height: 50px;
     background: #FFF;
     box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.25);
     display: flex;
