--- a/src/Styles/Shop.scss
+++ b/src/Styles/Shop.scss
@@ -1,174 +1,181 @@
 .shop-container {
-    // border: 1px solid #000;
-    border-radius: 7px;
-    background: #FFF;
-    box-shadow: 0px -5px 30px 0px rgba(0, 0, 0, 0.25);
-    width: 60%;
+  // border: 1px solid #000;
+  border-radius: 7px;
+  background: #fff;
+  box-shadow: 0px 0px 8px 1px rgb(0 0 0 / 16%);
+  // width: 60%;
+  margin: auto;
+  margin-bottom: 30px;
+  padding: 20px;
+  font-family: Poppins;
+  display: flex;
+  gap: 70px;
+  position: relative;
+
+  .card-image {
+    height: 250px;
+    width: 250px;
+    min-width: 250px;
+    border: 1px solid #f1f1f1;
+    border-radius: 10px;
+    display: flex;
+    overflow: hidden;
+
+    img {
+      object-fit: fill;
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+    }
+
+    button {
+      height: 20%;
+      width: 20%;
+      display: flex;
+      align-items: center;
+      font-weight: 500;
+      font-size: 16px;
+      margin-top: 30%;
+      background-color: #fff;
+      padding: 7px;
+      // height: 100px;
+      border: 1px solid #000;
+      cursor: pointer;
+    }
+  }
+
+  .card-data {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    h3 {
+      font-weight: 400;
+    }
+
+    .card-timings {
+      display: flex;
+      gap: 15px;
+
+      p {
+        font-size: 14px;
+        color: gray;
+      }
+    }
+
+    .card-address {
+      display: flex;
+      // align-items: center;
+      flex-direction: column;
+      // justify-content: left;
+
+      margin-top: 10px;
+      gap: 5px;
+
+      p {
+        font-size: 15px;
+      }
+    }
+
+    .icon {
+      font-weight: 600;
+    }
+
+    .card-subcategories {
+      display: flex;
+      margin-top: 5px;
+      gap: 7px;
+
+      p {
+        border: 1px solid #e5e5e5;
+        border-radius: 5px;
+        background-color: #e5e5e5;
+        color: #000;
+        font-weight: 300;
+        padding: 2px 15px;
+        font-size: 12px;
+      }
+    }
+
+    .card-button {
+      display: flex;
+      margin-top: 15px;
+      gap: 5px;
+      .whatsup-btn {
+        background-color: #4caf50;
+        color: white;
+        padding: 5px 10px;
+        border-radius: 5px;
+        border: 1px solid #4caf50;
+      }
+      button {
+        padding: 7px 10px;
+        background-color: #ff6c3d;
+        color: #fff;
+        border: 1px solid #ff6c3d;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 7px;
+      }
+    }
+  }
+
+  .fav-btn {
+    position: absolute;
+    right: 40px;
+    font-size: 25px;
+    cursor: pointer;
+  }
+
+  .active {
+    color: rgb(221, 9, 9);
+  }
+}
+
+@media (min-width: 900px) and (max-width: 1100px) {
+  .shop-container {
+    width: 90%;
     margin: auto;
     margin-top: 20px;
-    padding: 20px;
-    font-family: Poppins;
+  }
+}
+
+@media (min-width: 700px) and (max-width: 900px) {
+  .shop-container {
+    width: 90%;
+    margin: auto;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 700px) {
+  .shop-container {
+    width: 95%;
+    margin: auto;
     display: flex;
-    gap: 70px;
-    position: relative;
+    flex-direction: column;
 
     .card-image {
-        height: 300px;
-        width: 250px;
-        min-width: 250px;
-        // border: 1px solid #000;
-        border-radius: 10px;
-        display: flex;
-
-        img {
-            object-fit: contain;
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
-        }
-
-        button {
-            height: 20%;
-            width: 20%;
-            display: flex;
-            align-items: center;
-            font-weight: 500;
-            font-size: 16px;
-            margin-top: 30%;
-            background-color: #fff;
-            padding: 7px;
-            // height: 100px;
-            border: 1px solid #000;
-            cursor: pointer;
-        }
+      width: 100%;
     }
 
     .card-data {
+      .card-button {
         width: 100%;
-        display: flex;
-        flex-direction: column;
 
-        h3 {
-            font-weight: 400;
+        button {
+          padding: 7px 10px;
+          background-color: #ff6c3d;
+          color: #fff;
+          border: 1px solid #ff6c3d;
+          cursor: pointer;
+          font-size: 15px;
+          display: flex;
+          align-items: center;
+          gap: 7px;
         }
-
-        .card-timings {
-            display: flex;
-            gap: 15px;
-
-            p {
-                font-size: 14px;
-                color: gray;
-            }
-        }
-
-        .card-address {
-            display: flex;
-            // align-items: center;
-            flex-direction: column;
-            // justify-content: left;
-
-            margin-top: 10px;
-            gap: 5px;
-
-            p {
-                font-size: 15px;
-            }
-        }
-
-        .icon {
-            font-weight: 600;
-        }
-
-        .card-subcategories {
-            display: flex;
-            margin-top: 5px;
-            gap: 7px;
-
-            p {
-                border: 1px solid DDDDDD;
-                border-radius: 5px;
-                background-color: #DDDDDD;
-                font-weight: 300;
-                padding: 2px 15px;
-                font-size: 12px;
-            }
-        }
-
-        .card-button {
-            display: flex;
-            margin-top: 15px;
-            gap: 5px;
-
-            button {
-                padding: 7px 10px;
-                background-color: #FF6C3D;
-                color: #fff;
-                border: 1px solid #FF6C3D;
-                cursor: pointer;
-                display: flex;
-                align-items: center;
-                gap: 7px;
-            }
-        }
+      }
     }
-
-    .fav-btn {
-        position: absolute;
-        right: 40px;
-        font-size: 25px;
-        cursor: pointer;
-    }
-
-    .active {
-        color: rgb(221, 9, 9);
-    }
-}
-
-@media (min-width:900px) and (max-width:1100px) {
-    .shop-container {
-        width: 90%;
-        margin: auto;
-        margin-top: 20px;
-    }
-}
-
-@media (min-width:700px) and (max-width:900px) {
-    .shop-container {
-        width: 90%;
-        margin: auto;
-        margin-top: 20px;
-    }
-}
-
-@media (max-width:700px) {
-    .shop-container {
-        width: 95%;
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-
-        .card-image {
-            width: 100%;
-        }
-
-        .card-data {
-            .card-button {
-                width: 100%;
-
-
-                button {
-                    padding: 7px 10px;
-                    background-color: #FF6C3D;
-                    color: #fff;
-                    border: 1px solid #FF6C3D;
-                    cursor: pointer;
-                    font-size: 15px;
-                    display: flex;
-                    align-items: center;
-                    gap: 7px;
-                }
-            }
-        }
-    }
+  }
 }
